Add SEO metadata and robots.txt for improved search engine indexing

--- a/index.html
+++ b/index.html
@@ -32,6 +32,8 @@
     <meta name="theme-color" content="#f59e0b">
     <meta name="msapplication-TileColor" content="#f59e0b">
     <link rel="canonical" href="https://omnivesteduconsult.co.uk/">
+    <meta name="robots" content="index, follow" />
+
   </head>
   <body>
     <div id="root"></div>
